--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+.form-class {
+  background-color: #f2f2f2;
+  padding-left: 0.2in;
+  padding-top: 0.2in;
+  padding-bottom: 0.3in;
+}
+
+.btn {
+  padding: 12px 16px;
+  font-size: 30px;
+  cursor: pointer;
+  margin-left: 5px;
+}
